[tool.poetry]
name = "strata"
version = "0.1.0"
description = "Slide between resources and data"
authors = ["Geoff Low <glow@mdsol.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.3.2"
"fhir.resources" = "^6.5.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
